# mycppmath

./: CMakeLists.txt  README.md
include/: geometrie.h  include.h  line.h  makros.h  matrix4f.h  myallocator.h  mycppmath.h  plane.h  polygon.h  triangle.h  vector4f.h
src/: geometrie.cpp  line.cpp  matrix4f.cpp  myallocator.cpp  mycppmath.cpp  plane.cpp  polygon.cpp  triangle.cpp  vector4f.cpp
test/: testGeometrie.cpp  testMatrix.cpp  testMatrixThreaded.cpp
